fix for activity modal going offsreen on small viewport

--- a/src/main/webapp/resources/sass/trialverse-drugis.scss
+++ b/src/main/webapp/resources/sass/trialverse-drugis.scss
@@ -188,3 +188,7 @@ tr.clickable td {
 //////////////////////// end study results //
 
 
+.scrollable-wrapper {
+  overflow-y: auto;
+  margin-top: 1.5rem; // leave some space for the scrollbar
+}
